<resources>

    <string name="about">About</string>
    <string name="about_message">Never miss a drop again!\n\n%s is an Android app that lists the newest Atomic drops and notifies you of new upcoming ones.</string>
    <string name="about_donation">If you find this app useful, consider donating at %s</string>
    <string name="about_developed_by">Developed by Javier Mendonça.</string>
    <string name="about_twitter">"@javiermendonca"</string>
    <string name="about_telegram">"@javierjmc"</string>
    <string name="about_github">See project on github</string>
    <string name="about_version">Version: %s</string>
    <string name="about_twitter_link">"https://twitter.com/javiermendonca"</string>
    <string name="about_telegram_link">"https://t.me/javierjmc"</string>
    <string name="about_github_link">"https://github.com/javierjmc/atomic-drops-notifier"</string>

    <!-- urls -->
    <string name="atomichub_drop_link">https://wax.atomichub.io/drops/%d</string>
    <string name="ipfs_url">https://cloudflare-ipfs.com/ipfs/%s</string>

    <!-- Atomic Drop -->
    <string name="drop_id">dropId: %d</string>
    <string name="drop_price">%s</string>
    <string name="drop_price_format">%1$.2f %2$s</string>
    <string name="drop_available">%d/%d</string>
    <string name="drop_supply_unlimited">Unlimited</string>
    <string name="drop_free">Free to claim</string>
    <string name="ended">Ended!</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="drop_max_per_account">%d per account</string>
    <string name="drop_requires_whitelist">Requires whitelisting</string>


    <!-- Notifications -->
    <string name="checking_atomic_drops">Checking Atomic drops</string>
    <string name="notifications_drops_description">Shows notifications if there are new atomic nft drops on the way</string>
    <string name="notifications_drops_channel_id">atomicdrops</string>
    <string name="notifications_drops_channel">Atomic NFT Drops</string>
    <string name="notifications_new_drop_title">New Atomic drops on the way!</string>
    <string name="notifications_new_drop_title_error">Error fetching Atomic drops</string>
    <string name="notifications_new_drop_message">There are %d new drops upcoming!</string>
    <string name="notifications_new_drop_message_summary">New Atomic drops on the way!</string>

    <string name="notifications_health_title">Looking for new drops…</string>
    <string name="notifications_health_channel_id">atomicdrops_health</string>
    <string name="notifications_health_channel">Atomic NFT Drops Heartbeat</string>
    <string name="notifications_health_description">Makes sure fetching drops in the background is still active</string>

    <!-- Errors -->
    <string name="error_fetching_drops">Error fetching the drops</string>
    <string name="error_fetching_retry">Retry</string>

</resources>