<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="appName"
            type="String" />

        <variable
            name="donationAccount"
            type="String" />

        <variable
            name="appVersion"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/space_large"
        android:paddingTop="@dimen/space_normal">

        <TextView
            android:id="@+id/app_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/about_message, appName)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/about_message" />

        <TextView
            android:id="@+id/app_donation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/space_normal"
            android:text="@{String.format(@string/about_donation, donationAccount)}"
            android:textIsSelectable="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_description"
            tools:text="Donate" />

        <TextView
            android:id="@+id/developer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/space_normal"
            android:text="@string/about_developed_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_donation" />

        <TextView
            android:id="@+id/developer_twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/space_medium"
            android:text="@string/about_twitter"
            app:drawableStartCompat="@drawable/ic_twitter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/developer" />
        <TextView
            android:id="@+id/developer_telegram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/space_medium"
            android:text="@string/about_telegram"
            app:drawableStartCompat="@drawable/ic_telegram"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/developer_twitter" />

        <TextView
            android:id="@+id/app_github"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/space_medium"
            android:text="@string/about_github"
            app:drawableStartCompat="@drawable/ic_github"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/developer_telegram" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@{String.format(@string/about_version, appVersion)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_github"
            tools:text="Version: 1.0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>